@@ -7,6 +7,9 @@
    - stevesk@cvs.openbsd.org 2008/11/07 00:42:12
      [ssh-keygen.c]
      spelling/typo in comment
+   - stevesk@cvs.openbsd.org 2008/11/07 18:50:18
+     [nchan.c]
+     add space to some log/debug messages for readability; ok djm@ markus@
 
 20081105
  - OpenBSD CVS Sync
@@ -4899,4 +4902,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5134 2008/11/11 05:31:43 dtucker Exp $
+$Id: ChangeLog,v 1.5135 2008/11/11 05:32:25 dtucker Exp $
